Bug 330788 - "Information - Krusader" dialog does not fit to screen width; text non-copyable
Summary: "Information - Krusader" dialog does not fit to screen width; text non-copyable
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-05 09:56 UTC by Cade
Modified: 2019-07-22 06:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cade 2014-02-05 09:56:00 UTC
"Information - Krusader" dialog contains text.
This text must be multiline and selectable (for copy - paste).

Reproducible: Always

Steps to Reproduce:
1. Open Krusader.
2. Copy (F5) file with long filename.
3. Dialog "Information - Krusader" appears.
Actual Results:  
Width of dialog much large then screen width.
Text is not selectable (copyable).

Expected Results:  
Multiline and selectable text.
Comment 1 Ralf Habacker 2014-02-06 21:41:28 UTC
Git commit c3f1b04023ebfa4a95c42fb9ea3dcf41df10fb54 by Ralf Habacker.
Committed on 03/02/2014 at 20:48.
Pushed by habacker into branch '330788-3.5-cpp-parser'.

import kdevelop 3.5 parser

M  +2    -6    CMakeLists.txt
D  +0    -71   lib/cppparser/assignFunctor.hpp
M  +115  -55   lib/cppparser/ast.cpp
M  +260  -118  lib/cppparser/ast.h
M  +0    -25   lib/cppparser/ast_utils.cpp
M  +0    -1    lib/cppparser/ast_utils.h
A  +89   -0    lib/cppparser/cachemanager.cpp     [License: GPL (v2+)]
A  +103  -0    lib/cppparser/cachemanager.h     [License: GPL (v2+)]
M  +863  -336  lib/cppparser/driver.cpp
M  +386  -165  lib/cppparser/driver.h
M  +5    -5    lib/cppparser/errors.cpp
M  +8    -5    lib/cppparser/errors.h
A  +96   -0    lib/cppparser/keywords.h     [License: UNKNOWN]  *
D  +0    -123  lib/cppparser/keywords.lut.h
M  +914  -330  lib/cppparser/lexer.cpp
M  +806  -110  lib/cppparser/lexer.h
A  +249  -0    lib/cppparser/lexercache.cpp     [License: GPL (v2+)]
A  +162  -0    lib/cppparser/lexercache.h     [License: GPL (v2+)]
M  +33   -102  lib/cppparser/lookup.cpp
M  +34   -107  lib/cppparser/lookup.h
A  +452  -0    lib/cppparser/macro.h     [License: GPL (v2+)]
M  +2496 -2449 lib/cppparser/parser.cpp
M  +277  -61   lib/cppparser/parser.h
D  +0    -106  lib/cppparser/position.h
D  +0    -1030 lib/cppparser/preprocesslexer.cpp
D  +0    -380  lib/cppparser/preprocesslexer.h
D  +0    -99   lib/cppparser/skip_rule.hpp
M  +66   -61   lib/cppparser/tree_parser.cpp
M  +9    -8    lib/cppparser/tree_parser.h
A  +1823 -0    lib/interfaces/codemodel.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +1620 -0    lib/interfaces/codemodel.h     [License: LGPL (v2+) (wrong address)]  *
A  +108  -0    lib/interfaces/codemodel_treeparser.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +85   -0    lib/interfaces/codemodel_treeparser.h     [License: LGPL (v2+) (wrong address)]  *
A  +747  -0    lib/interfaces/codemodel_utils.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +570  -0    lib/interfaces/codemodel_utils.h     [License: LGPL (v2+) (wrong address)]  *
A  +361  -0    lib/interfaces/hashedstring.cpp     [License: GPL (v2+)]
A  +156  -0    lib/interfaces/hashedstring.h     [License: GPL (v2+)]
A  +73   -0    lib/interfaces/kdatastream.h     [License: UNKNOWN]  *
M  +7    -4    umbrello/CMakeLists.txt
M  +3    -3    umbrello/codeimport/cppimport.cpp
M  +2    -2    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +1    -1    umbrello/codeimport/kdevcppparser/cpptree2uml.h

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/umbrello/c3f1b04023ebfa4a95c42fb9ea3dcf41df10fb54
Comment 2 Ralf Habacker 2014-02-06 21:41:30 UTC
Git commit 5c73ccb3dd9ba11365cd4a4f2ee543e37c4e4a72 by Ralf Habacker.
Committed on 05/02/2014 at 21:53.
Pushed by habacker into branch '330788-3.5-cpp-parser'.

print out all kind of parse errors.

M  +18   -1    umbrello/codeimport/cppimport.cpp

http://commits.kde.org/umbrello/5c73ccb3dd9ba11365cd4a4f2ee543e37c4e4a72
Comment 3 Ralf Habacker 2014-02-06 21:41:31 UTC
Git commit 7c2285539f3a0bbf12b294d478b6b12c94589341 by Ralf Habacker.
Committed on 05/02/2014 at 22:32.
Pushed by habacker into branch '330788-3.5-cpp-parser'.

Workaround for not having filename in error problem instance.

M  +1    -1    umbrello/codeimport/cppimport.cpp

http://commits.kde.org/umbrello/7c2285539f3a0bbf12b294d478b6b12c94589341
Comment 4 Ralf Habacker 2014-02-06 21:41:33 UTC
Git commit 7534ea02959baed327f7c0fb40bd54f0247834d5 by Ralf Habacker.
Committed on 05/02/2014 at 22:55.
Pushed by habacker into branch '330788-3.5-cpp-parser'.

Set Loading on import to speed up list view update.

M  +2    -0    umbrello/codeimport/classimport.cpp

http://commits.kde.org/umbrello/7534ea02959baed327f7c0fb40bd54f0247834d5
Comment 5 Jekyll Wu 2014-02-07 14:01:24 UTC
@Ralf, I'm confused. Did you operate on the wrong report ? How could this krusader report block bug 231275, an umbrello crash issue ?
Comment 6 Ralf Habacker 2014-02-11 23:42:00 UTC
Git commit 40d4232ad0a67ecea3d5fbc5bb2fbf2fef44b873 by Ralf Habacker.
Committed on 03/02/2014 at 20:48.
Pushed by habacker into branch 'master'.

Update cpp parser to kdevelop's version 3.5 parser.

M  +2    -6    CMakeLists.txt
D  +0    -71   lib/cppparser/assignFunctor.hpp
M  +115  -55   lib/cppparser/ast.cpp
M  +260  -118  lib/cppparser/ast.h
M  +0    -25   lib/cppparser/ast_utils.cpp
M  +0    -1    lib/cppparser/ast_utils.h
A  +89   -0    lib/cppparser/cachemanager.cpp     [License: GPL (v2+)]
A  +103  -0    lib/cppparser/cachemanager.h     [License: GPL (v2+)]
M  +863  -336  lib/cppparser/driver.cpp
M  +386  -165  lib/cppparser/driver.h
M  +5    -5    lib/cppparser/errors.cpp
M  +8    -5    lib/cppparser/errors.h
A  +96   -0    lib/cppparser/keywords.h     [License: UNKNOWN]  *
D  +0    -123  lib/cppparser/keywords.lut.h
M  +914  -330  lib/cppparser/lexer.cpp
M  +806  -110  lib/cppparser/lexer.h
A  +249  -0    lib/cppparser/lexercache.cpp     [License: GPL (v2+)]
A  +162  -0    lib/cppparser/lexercache.h     [License: GPL (v2+)]
M  +33   -102  lib/cppparser/lookup.cpp
M  +34   -107  lib/cppparser/lookup.h
A  +452  -0    lib/cppparser/macro.h     [License: GPL (v2+)]
M  +2496 -2449 lib/cppparser/parser.cpp
M  +277  -61   lib/cppparser/parser.h
D  +0    -106  lib/cppparser/position.h
D  +0    -1030 lib/cppparser/preprocesslexer.cpp
D  +0    -380  lib/cppparser/preprocesslexer.h
D  +0    -99   lib/cppparser/skip_rule.hpp
M  +66   -61   lib/cppparser/tree_parser.cpp
M  +9    -8    lib/cppparser/tree_parser.h
A  +1823 -0    lib/interfaces/codemodel.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +1620 -0    lib/interfaces/codemodel.h     [License: LGPL (v2+) (wrong address)]  *
A  +108  -0    lib/interfaces/codemodel_treeparser.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +85   -0    lib/interfaces/codemodel_treeparser.h     [License: LGPL (v2+) (wrong address)]  *
A  +747  -0    lib/interfaces/codemodel_utils.cpp     [License: LGPL (v2+) (wrong address)]  *
A  +570  -0    lib/interfaces/codemodel_utils.h     [License: LGPL (v2+) (wrong address)]  *
A  +361  -0    lib/interfaces/hashedstring.cpp     [License: GPL (v2+)]
A  +156  -0    lib/interfaces/hashedstring.h     [License: GPL (v2+)]
A  +73   -0    lib/interfaces/kdatastream.h     [License: UNKNOWN]  *
M  +7    -4    umbrello/CMakeLists.txt
M  +3    -3    umbrello/codeimport/cppimport.cpp
M  +2    -2    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +1    -1    umbrello/codeimport/kdevcppparser/cpptree2uml.h

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/umbrello/40d4232ad0a67ecea3d5fbc5bb2fbf2fef44b873
Comment 7 Ralf Habacker 2014-02-11 23:42:01 UTC
Git commit b1756df0fe9d40210215e03f63a2bd4f364b7509 by Ralf Habacker.
Committed on 05/02/2014 at 21:53.
Pushed by habacker into branch 'master'.

Print out all kind of cpp parse result, which helps developer to find parser bugs.

M  +18   -1    umbrello/codeimport/cppimport.cpp

http://commits.kde.org/umbrello/b1756df0fe9d40210215e03f63a2bd4f364b7509
Comment 8 Ralf Habacker 2014-02-11 23:42:02 UTC
Git commit 747d84a5f6f509baac17281df9db181ec34b4e57 by Ralf Habacker.
Committed on 05/02/2014 at 22:32.
Pushed by habacker into branch 'master'.

Workaround for not having filename in error problem instance.

M  +1    -1    umbrello/codeimport/cppimport.cpp

http://commits.kde.org/umbrello/747d84a5f6f509baac17281df9db181ec34b4e57
Comment 9 Ralf Habacker 2014-02-11 23:42:03 UTC
Git commit 6c07eaa1de91edc103837ddd7f909c59a8e9ab07 by Ralf Habacker.
Committed on 05/02/2014 at 22:55.
Pushed by habacker into branch 'master'.

Set Loading on import to speed up list view update.

M  +2    -0    umbrello/codeimport/classimport.cpp

http://commits.kde.org/umbrello/6c07eaa1de91edc103837ddd7f909c59a8e9ab07
Comment 10 Ralf Habacker 2014-02-11 23:57:08 UTC
Git commit 586044811560e7bd1dd9ad796f50b988f02dacb5 by Ralf Habacker.
Committed on 06/02/2014 at 23:33.
Pushed by habacker into branch 'master'.

Add class Lexer debug info.

M  +2    -0    lib/cppparser/lexer.cpp
M  +5    -1    lib/cppparser/lexer.h

http://commits.kde.org/umbrello/586044811560e7bd1dd9ad796f50b988f02dacb5
Comment 11 Ralf Habacker 2014-02-11 23:57:37 UTC
Git commit 5fd90cbf8048404f8b688667ead86ffd1ee7b80e by Ralf Habacker.
Committed on 11/02/2014 at 22:59.
Pushed by habacker into branch 'master'.

Add class TreeParser debug info.

M  +22   -18   lib/cppparser/tree_parser.cpp

http://commits.kde.org/umbrello/5fd90cbf8048404f8b688667ead86ffd1ee7b80e
Comment 12 Ralf Habacker 2014-02-11 23:58:16 UTC
Git commit 6de3829d035f51946333b13844d7b01213adf8aa by Ralf Habacker.
Committed on 06/02/2014 at 23:46.
Pushed by habacker into branch 'master'.

Cleanup code style of imported cpp parser.

astyle --style=linux --indent=spaces=4  --pad-header --keep-one-line-statements --convert-tabs

M  +132  -133  lib/cppparser/ast.cpp
M  +559  -208  lib/cppparser/ast.h
M  +49   -52   lib/cppparser/ast_utils.cpp
M  +4    -1    lib/cppparser/ast_utils.h
M  +62   -51   lib/cppparser/cachemanager.cpp
M  +50   -40   lib/cppparser/cachemanager.h
M  +655  -579  lib/cppparser/driver.cpp
M  +72   -60   lib/cppparser/driver.h
M  +4    -3    lib/cppparser/errors.h
M  +2    -2    lib/cppparser/keywords.h
M  +399  -403  lib/cppparser/lexer.cpp
M  +166  -156  lib/cppparser/lexer.h
M  +184  -167  lib/cppparser/lexercache.cpp
M  +51   -39   lib/cppparser/lexercache.h
M  +5    -6    lib/cppparser/lookup.cpp
M  +3    -2    lib/cppparser/lookup.h
M  +260  -210  lib/cppparser/macro.h
M  +1655 -1674 lib/cppparser/parser.cpp
M  +203  -181  lib/cppparser/parser.h
M  +25   -27   lib/cppparser/tree_parser.cpp
M  +2    -2    lib/cppparser/tree_parser.h
M  +591  -548  lib/interfaces/codemodel.cpp
M  +374  -246  lib/interfaces/codemodel.h
M  +33   -33   lib/interfaces/codemodel_treeparser.cpp
M  +7    -7    lib/interfaces/codemodel_treeparser.h
M  +218  -268  lib/interfaces/codemodel_utils.cpp
M  +131  -126  lib/interfaces/codemodel_utils.h
M  +252  -222  lib/interfaces/hashedstring.cpp
M  +45   -34   lib/interfaces/hashedstring.h
M  +24   -24   lib/interfaces/kdatastream.h

http://commits.kde.org/umbrello/6de3829d035f51946333b13844d7b01213adf8aa
Comment 13 Ralf Habacker 2014-02-11 23:58:28 UTC
Git commit 2ee2782c175bf78100e7c3b2661bbd1bb976ace0 by Ralf Habacker.
Committed on 11/02/2014 at 22:58.
Pushed by habacker into branch 'master'.

Add class Parser debug info.

M  +106  -104  lib/cppparser/parser.cpp

http://commits.kde.org/umbrello/2ee2782c175bf78100e7c3b2661bbd1bb976ace0
Comment 14 Davide Gianforte 2019-07-21 15:46:26 UTC
Git commit 11ad2b9ef22dbf8a160d54270c4a67558c842748 by Davide Gianforte.
Committed on 21/07/2019 at 15:45.
Pushed by gengisdave into branch 'master'.

Wrap text in copy/move confirmation dialog

When you want to copy/move a file with a very long name, the confirmation dialog is opened very wide to respect the filename width.

Wrapping the text let the dialog to be drawn at the usual width.

FIXED: [ 330788 ] "Information - Krusader" dialog does not fit to screen width; text non-copyable

Differential Revision: https://phabricator.kde.org/D22443

M  +4    -1    krusader/Dialogs/krdialogs.cpp

https://commits.kde.org/krusader/11ad2b9ef22dbf8a160d54270c4a67558c842748
Comment 15 Nikita Melnichenko 2019-07-22 06:41:50 UTC
Git commit 258d9d122600b515d90087b6cca1c69c478818ea by Nikita Melnichenko, on behalf of Davide Gianforte.
Committed on 22/07/2019 at 06:31.
Pushed by melnichenko into branch 'stable'.

Wrap text in copy/move confirmation dialog

When you want to copy/move a file with a very long name, the confirmation dialog is opened very wide to respect the filename width.

Wrapping the text let the dialog to be drawn at the usual width.

FIXED: [ 330788 ] "Information - Krusader" dialog does not fit to screen width; text non-copyable

Differential Revision: https://phabricator.kde.org/D22443

(cherry picked from commit 11ad2b9ef22dbf8a160d54270c4a67558c842748)

M  +4    -1    krusader/Dialogs/krdialogs.cpp

https://commits.kde.org/krusader/258d9d122600b515d90087b6cca1c69c478818ea